# bs-telegram-server

./: .gitignore  README.md  app.py  pyproject.toml  start.sh  test.py  test_telegram_server
managers/: telegram_client_manager.py
routers/: auth_router.py  channels_router.py  listening_router.py
services/: channels_service.py
util/: config.py  util.py
